# utf-8

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: gtest.cmake
src/: utf8.cpp  utf8.h
tests/: utf8_test.cpp
